--- a/frontend/src/Components/css/Products.css
+++ b/frontend/src/Components/css/Products.css
@@ -125,6 +125,6 @@ div a:hover {
 }
 @media (min-width: 375px) and (max-width: 425px) {
   .products{
-    margin-left: 2.2rem;
+    margin-left: 2.6rem;
   }
 }
